<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:clickable="true"
    android:paddingStart="12dp"
    android:paddingTop="18dp"
    android:paddingEnd="12dp"
    android:paddingBottom="24dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/input_title_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_in_account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:fontFamily="@font/jost_medium_500"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/back"
        app:layout_constraintBottom_toBottomOf="@id/back"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/prompt_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/input_prompt"
        android:textAlignment="center"
        android:textColor="@color/white_alpha_50"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_title_txt" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_edt_txt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="83dp"
        android:background="@drawable/edt_txt_corner_radius"
        android:fontFamily="@font/jost_regular_400"
        android:gravity="start|center"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white_alpha_50"
        android:textCursorDrawable="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/prompt_txt" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/password_visible_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_arrow_to_down"
        app:layout_constraintEnd_toEndOf="@id/password_edt_txt"
        app:layout_constraintTop_toTopOf="@id/password_edt_txt"
        app:layout_constraintBottom_toBottomOf="@id/password_edt_txt"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continue_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="153dp"
        android:background="@drawable/button_corner_radius"
        android:enabled="false"
        android:fontFamily="@font/jost_medium_500"
        android:gravity="center"
        android:text="@string/continue_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:stateListAnimator="@null"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/password_edt_txt" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/restore_password_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/restore_password"
        android:textAlignment="center"
        android:textColor="@color/lilac"
        android:fontFamily="@font/jost_semibold_600"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/continue_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>